Add PATCH /api/v3/mobile_sessions/:uuid (update session)
